Various layout issues #3 (#263)

--- a/src/components/middle/message/Message.scss
+++ b/src/components/middle/message/Message.scss
@@ -29,7 +29,7 @@
 
   &.own {
     flex-direction: row-reverse;
-    --background-color: #EEFEDF;
+    --background-color: var(--color-background-own);
     --hover-color: rgba(var(--color-text-green-rgb), 0.12);
     --max-width: 30rem;
     --accent-color: var(--color-text-green);
@@ -207,6 +207,10 @@
     font-weight: 500;
     line-height: 1.25rem;
     color: var(--accent-color);
+
+    & + .File {
+      margin-top: .25rem;
+    }
   }
 
   &.has-solid-background {
